[tool.poetry]
name = "leetcode"
version = "0.1.0"
description = ""
authors = ["Edwin Jarvis <edwin.jarvis@taiwolskit.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
bandit = "^1.7.4"
black = "^22.6.0"
mypy = "^0.971"
prospector = "^1.7.7"
pylama = "^8.3.8"
pylint = "^2.14.5"
