[tool.poetry]
name = "leetcode"
version = "0.1.0"
description = ""
authors = ["Edwin Jarvis <edwin.jarvis@taiwolskit.com>"]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]
autopep8 = "^1.7.0"
bandit = "^1.7.5"
black = "^22.12.0"
mypy = "^1.2.0"
prospector = "^1.9.0"
pylama = "^8.4.1"
pylint = "^2.17.2"
