[tool.poetry]
name = "leetcode"
version = "0.1.0"
description = ""
authors = ["Edwin Jarvis <edwin.jarvis@taiwolskit.com>"]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]
autopep8 = "^1.7.0"
bandit = "^1.7.5"
black = "^24.3.0"
mypy = "^1.3.0"
prospector = "^1.10.2"
pylama = "^8.4.1"
pylint = "^2.17.4"
